--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
 
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
